# Escape_From_Markov_MatC_VicH_TheoL

./: .gitignore  CMakeLists.txt  chained.c  chained.h  hasse.c  hasse.h  main.c  matrix.c  matrix.h  part2.c  utils.c  utils.h
data/: TESTSUBMAT.txt  ariel.txt  dusk.txt
